--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "concurrently": "^5.3.0",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.9",
     "morgan": "^1.10.0"
   },
