--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "mongoose": "^5.11.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-cron": "^2.0.3",
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
